<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_settings">

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.lpi.bloquespam.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settings_fragment_to_rules_fragment"
            app:destination="@id/navigation_rules"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/navigation_history" />
    </fragment>

    <fragment
        android:id="@+id/navigation_rules"
        android:name="com.lpi.bloquespam.ui.regles.ReglesFragment"
        android:label="@string/title_regles"
        tools:layout="@layout/fragment_regles">
        <action
            android:id="@+id/action_rules_fragment_to_history_fragment"
            app:destination="@id/navigation_history"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/navigation_settings" />
    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.lpi.bloquespam.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history">
        <action
            android:id="@+id/action_history_fragment_to_settings_fragment"
            app:destination="@id/navigation_settings"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/navigation_settings" />
    </fragment>

</navigation>